objects/SGR_Account_Plan_Rate__c.object
<CustomObject>
    <description>Presents a version of Plan Rate data used to process renewal opportunities.</description>
    <fields>
        <fullName>ACA_Fee__c</fullName>
        <label>ACA Fee</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACA_Indicator__c</fullName>
        <label>ACA Indicator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Plan_Rate_External_Id__c</fullName>
        <label>Account Plan Rate (External Id)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLK_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account ID</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Plan_Rates_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Member_Benefit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Member Benefit</label>
        <referenceTo>SGR_Account_Member_Benefit__c</referenceTo>
        <relationshipName>SGR_Plan_Rates_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Bracket_Meth_Code__c</fullName>
        <label>Age Bracket Meth Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Effective_Date__c</fullName>
        <label>Assignment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment_End_Date__c</fullName>
        <label>Assignment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Cancel_Date__c</fullName>
        <label>Benefit Agreement Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Description__c</fullName>
        <label>Benefit Agreement Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Effective_Date__c</fullName>
        <label>Benefit Agreement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_End_Date__c</fullName>
        <label>Benefit Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Number__c</fullName>
        <label>Benefit Agreement Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Rate_Effective_Date__c</fullName>
        <label>Benefit Agreement Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Rate_End_Date__c</fullName>
        <label>Benefit Agreement Rate End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Renewal_Date__c</fullName>
        <label>Benefit Agreement Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Agreement</label>
        <referenceTo>Benefit_Agreement__c</referenceTo>
        <relationshipName>SGR_Plan_Rates_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancel_Code__c</fullName>
        <label>Cancel Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composite_Rate__c</fullName>
        <label>Composite Rates</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corp_Tier_Number__c</fullName>
        <label>Corp Tier Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Entitity_Code__c</fullName>
        <label>Corporate Entitity Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Product_Name__c</fullName>
        <label>Corporate Product Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Product_Number__c</fullName>
        <label>Corporate Product Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <description>Uses global picklist:   Coverage_TypeG__c</description>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Coverage_TypeG</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Age__c</fullName>
        <label>From Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SGR_Plan_Rates_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_SectionLK_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Group Section. Contains ID of selected Group Section record related to this Plan Rate.</description>
        <label>Group Section</label>
        <referenceTo>Group_Section__c</referenceTo>
        <relationshipName>SGR_Plan_Rates_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Section_Cancel_Code__c</fullName>
        <label>Group Section Cancel Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Section_Cancel_Date__c</fullName>
        <label>Group Section Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Section_Number__c</fullName>
        <label>Group Section Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section_Original_Effective_Date__c</fullName>
        <label>Group Section Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Section_Renewal_Date__c</fullName>
        <label>Group Section Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Health_Rating_Area_Number__c</fullName>
        <label>Health Rating Area Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Number__c</fullName>
        <label>Internal Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Plan_Number__c</fullName>
        <label>Market Plan Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_ID__c</fullName>
        <label>Marketing Plan ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maternity__c</fullName>
        <label>Maternity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Premium__c</fullName>
        <label>Member Premium</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_Rate__c</fullName>
        <label>Member Rates</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipName>SGR_Plan_Rates_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_SSNK__c</fullName>
        <label>Policy SSNK</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_SSNK__c</fullName>
        <label>RT SSNK</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rate_Effective_Date__c</fullName>
        <label>Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Seq_Number__c</fullName>
        <label>Rate Seq Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Size_Code__c</fullName>
        <label>Rate Size Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Structure_Type_Code__c</fullName>
        <label>Rate Structure Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type_Code__c</fullName>
        <label>Rate Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Plan_Id__c</fullName>
        <label>Sales Plan ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thru_Age__c</fullName>
        <label>Thru Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Aggregate_Seq__c</fullName>
        <label>Tier Aggregate Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Agreement_Sequence_Number__c</fullName>
        <label>Tier Agreement Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Number__c</fullName>
        <label>Tier Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Alternative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Benefit_Agreement_Number__c</fullName>
        <label>User Benefit Agreement Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Display_Ben_Agree_Number__c</fullName>
        <label>User Display Ben Agree Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Display_Section_Number__c</fullName>
        <label>User Display Section Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isInvitro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invitro (TX only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMaternity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maternity</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Plan Rate</label>
    <nameField>
        <displayFormat>PR - {00000000}</displayFormat>
        <label>SGR Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Rate</pluralLabel>
    <recordTypes>
        <fullName>SGR_Account_Plan_Rate</fullName>
        <active>true</active>
        <label>SGR  Account Plan Rate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>